@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +29,8 @@ public class CountryServiceImpl implements CountryService {
         List<Country> countries = countryRepository.findAll();
         return countries.stream()
                 .map(countryMapper::toCountryDTO)
-                .toList();
+                .collect(Collectors.toList());
+
     }
 
     @Override
